--- a/public/dashboard/css/style.css
+++ b/public/dashboard/css/style.css
@@ -1093,3 +1093,185 @@ h4{
 .state_color15{
     color: #FFAB91 ;
 }
+
+#Covid h4.my-5{
+    font-weight: normal;
+  }
+  .chartdiv {
+    width: 100%;
+    height: 350px;
+    background-color: #e1e2e3a1;
+  }
+  /*#append_pvt_bodies_graph{
+      background-color: #e1e2e3a1;
+
+  }*/
+  .amchart{
+    width: 100%;
+    height: 350px;
+    background-color: white;
+    font-size: 10px;
+  }
+  .amchart2{
+    width: 100%;
+    height: 350px;
+    background-color: white;
+  }
+
+  #append_div {
+    width: 100%;
+    height: 350px;
+    background-color: white;
+  }
+  .select-sec-box h5 {
+    padding-top: 0px;
+    font-size: 16px;
+    font-weight: 400;
+  }
+  .pp_append_div {
+    width: 100%;
+    
+    background-color: white;
+  }
+  .custom-date-sec{
+    padding-top: 2px
+  }
+
+  .custom-date-sec input{
+   padding: 22px 10px !important;
+   background: #f7f2ef !important;
+   margin-top: 4px !important
+
+ }
+ .custom-date-sec-s input{
+   background: #f7f2ef !important;
+
+ }
+ .select-sec-box select{
+  padding: 6px;
+  width: 95%;
+  font-size: 16px;
+} 
+.select-sec-box.topic button{
+  border: 1px solid #cecece;
+  height: 40px;
+  width: 100px;
+  margin-top: 40px;
+  font-size: 16px;
+  color: #000000;
+}
+select#yes_no_in_district {
+  width: 85%;
+}
+ul#list_group li {
+  list-style: none;
+  font-size: 14px;
+  padding: 5px;
+  color: #000
+}
+ul#list_group li:first-child{
+  padding-top: 0px
+}
+.District-List h6{
+  font-size: 23px;
+  color: #000;
+}
+.custom-date-sec.extra-custome input {
+  width: 95%;
+}
+.topic select,select#select_value,select#pp_select_value_id1{
+  padding: 10px;
+}
+.dashboard-right-section {
+  padding-right: 60px;
+  padding-bottom: 40px;
+}
+.start_date{
+  width: 100%;
+}
+.multiselect-selected-text{
+  font-size: 13px !important;
+}
+.report-box.report-number a {
+  text-decoration: none;
+}
+
+.report-box.report-number a h4{
+  font-size: 18px;
+  color: #000;
+  font-weight: 600;
+}
+.multiselect-container>li>a>label{
+  padding: 5px 0px 7px 20px;
+}
+ul.multiselect-container.dropdown-menu.month-section li{
+  font-size: 14px
+}
+
+
+
+.dropdown dd, .dropdown dt {
+    margin:0px;
+    padding:0px;
+}
+.dropdown ul {
+    margin: -1px 0 0 0;
+}
+.dropdown dd {
+    position:relative;
+}
+.dropdown a, 
+.dropdown a:visited {
+    color:#fff;
+    text-decoration:none;
+    outline:none;
+    font-size: 12px;
+}
+.dropdown dt a {
+    background-color: #fff;
+    display: block;
+    padding: 20px;
+    line-height: 24px;
+    overflow: hidden;
+    border: 0;
+    border-radius: 10px;
+}
+.dropdown dt a span, .multiSel span {
+    cursor:pointer;
+    display:inline-block;
+    padding: 0 3px 2px 0;
+        color: #000;
+    font-weight: 400;
+    font-size: 14px;
+}
+.dropdown dd ul {
+    background-color: #ffffff;
+    border: 0;
+    color: #000;
+    display: none;
+    left: 0px;
+    padding: 2px 15px 2px 5px;
+    position: absolute;
+    top: 2px;
+    list-style: none;
+    overflow: auto;
+    width: 100%;
+    font-size: 14px;
+    z-index: 99;
+}
+.dropdown span.value {
+    display:none;
+}
+.mutliSelect ul li input {
+    margin-right: 10px;
+}
+.dropdown dd ul li a {
+    padding:5px;
+    display:block;
+}
+.dropdown dd ul li a:hover {
+    background-color:#fff;
+}
+.mutliSelect ul li {
+    padding: 10px 0px 0px 15px;
+}
